Fixes issue #242: bookmark action buttons ("...") in bookmark list are stretched on iPad.

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -1202,7 +1202,7 @@ div.current {
   }
     .ui-icon-lyt-more {
     background-image: url(../images/icons/more_icn_36.png);
-    background-size: 25px 18px;
+    background-size: 18px 18px;
   }
     .ui-icon-share {
     background-image: url(../images/icons/share_icn_36.png);
